// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TurnPlate components basic render 1`] = `
<ImageBackground
  source={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "marginVertical": 80,
        "position": "relative",
      },
      Object {
        "height": 600,
        "width": 600,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#6161EF",
          "height": 12,
          "left": 124.29437251522862,
          "opacity": 1,
          "top": 463.7056274847714,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 89.36636055501796,
          "opacity": 1,
          "top": 419.3996555318279,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 65.74643608916315,
          "opacity": 1,
          "top": 368.1640786499874,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 54.73983990404929,
          "opacity": 1,
          "top": 312.8301829746827,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 56.95479825716694,
          "opacity": 1,
          "top": 256.45572839034463,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 72.2689121972912,
          "opacity": 1,
          "top": 202.1559762323784,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 99.8359213500126,
          "opacity": 1,
          "top": 152.9315394498065,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 138.1324684007558,
          "opacity": 1,
          "top": 111.50256825599268,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 185.04228006250872,
          "opacity": 1,
          "top": 80.15843419479174,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 237.97311267458275,
          "opacity": 1,
          "top": 60.6312191045576,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 293.99999999999994,
          "opacity": 1,
          "top": 54,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 350.02688732541736,
          "opacity": 1,
          "top": 60.63121910455763,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 402.95771993749116,
          "opacity": 1,
          "top": 80.15843419479168,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 449.8675315992441,
          "opacity": 1,
          "top": 111.5025682559926,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 488.16407864998723,
          "opacity": 1,
          "top": 152.93153944980622,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 515.7310878027088,
          "opacity": 1,
          "top": 202.1559762323783,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 531.0452017428331,
          "opacity": 1,
          "top": 256.45572839034475,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 533.2601600959507,
          "opacity": 1,
          "top": 312.8301829746826,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 522.2535639108369,
          "opacity": 1,
          "top": 368.1640786499873,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 498.63363944498224,
          "opacity": 1,
          "top": 419.3996555318276,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#D9D9E0",
          "height": 12,
          "left": 463.70562748477164,
          "opacity": 1,
          "top": 463.7056274847712,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "height": 370,
          "width": 370,
        },
        undefined,
      ]
    }
  >
    <AnimatedComponent
      style={
        Array [
          Object {
            "height": 370,
            "transform": Array [
              Object {
                "rotate": "0deg",
              },
            ],
            "width": 370,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "height": 20,
              "position": "absolute",
              "width": 20,
            },
            Object {
              "backgroundColor": "#6161EF",
              "left": 68.93398282201788,
              "opacity": 1,
              "top": 281.06601717798213,
            },
            undefined,
          ]
        }
      />
    </AnimatedComponent>
  </View>
  <Progress
    andDegree={280}
    backColor="#E5E5E5"
    backStrokeOpacity={1}
    disabled={false}
    endColor={null}
    foreColor="#FF4800"
    foreStrokeOpacity={1}
    gradientId="Progress"
    max={100}
    min={0}
    needMaxCircle={true}
    needMinCircle={false}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    pointerEvents="box-only"
    renderCenterView={null}
    scaleHeight={70}
    startColor={null}
    startDegree={130}
    stepValue={5}
    style={
      Array [
        Object {
          "opacity": 0,
          "position": "absolute",
        },
        Object {
          "height": 540,
          "width": 540,
        },
        undefined,
      ]
    }
    thumbFill="#fff"
    thumbRadius={35}
    thumbStroke="#fff"
    thumbStrokeWidth={2}
    value={0}
    x1="0%"
    x2="100%"
    y1="0%"
    y2="0%"
  />
</ImageBackground>
`;

exports[`TurnPlate components disabled render 1`] = `
<ImageBackground
  source={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "marginVertical": 80,
        "position": "relative",
      },
      Object {
        "height": 600,
        "width": 600,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 124.29437251522862,
          "opacity": 0.7,
          "top": 463.7056274847714,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 89.36636055501796,
          "opacity": 0.7,
          "top": 419.3996555318279,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 65.74643608916315,
          "opacity": 0.7,
          "top": 368.1640786499874,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 54.73983990404929,
          "opacity": 0.7,
          "top": 312.8301829746827,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 56.95479825716694,
          "opacity": 0.7,
          "top": 256.45572839034463,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 72.2689121972912,
          "opacity": 0.7,
          "top": 202.1559762323784,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 99.8359213500126,
          "opacity": 0.7,
          "top": 152.9315394498065,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 138.1324684007558,
          "opacity": 0.7,
          "top": 111.50256825599268,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 185.04228006250872,
          "opacity": 0.7,
          "top": 80.15843419479174,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 237.97311267458275,
          "opacity": 0.7,
          "top": 60.6312191045576,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 293.99999999999994,
          "opacity": 0.7,
          "top": 54,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 350.02688732541736,
          "opacity": 0.7,
          "top": 60.63121910455763,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 402.95771993749116,
          "opacity": 0.7,
          "top": 80.15843419479168,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 449.8675315992441,
          "opacity": 0.7,
          "top": 111.5025682559926,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 488.16407864998723,
          "opacity": 0.7,
          "top": 152.93153944980622,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 515.7310878027088,
          "opacity": 0.7,
          "top": 202.1559762323783,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 531.0452017428331,
          "opacity": 0.7,
          "top": 256.45572839034475,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 533.2601600959507,
          "opacity": 0.7,
          "top": 312.8301829746826,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 522.2535639108369,
          "opacity": 0.7,
          "top": 368.1640786499873,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 498.63363944498224,
          "opacity": 0.7,
          "top": 419.3996555318276,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 463.70562748477164,
          "opacity": 0.7,
          "top": 463.7056274847712,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "height": 370,
          "width": 370,
        },
        undefined,
      ]
    }
  >
    <AnimatedComponent
      style={
        Array [
          Object {
            "height": 370,
            "transform": Array [
              Object {
                "rotate": "135deg",
              },
            ],
            "width": 370,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "height": 20,
              "position": "absolute",
              "width": 20,
            },
            Object {
              "backgroundColor": "#0ff",
              "left": 68.93398282201788,
              "opacity": 0.7,
              "top": 281.06601717798213,
            },
            undefined,
          ]
        }
      />
    </AnimatedComponent>
  </View>
  <Progress
    andDegree={280}
    backColor="#E5E5E5"
    backStrokeOpacity={1}
    disabled={true}
    endColor={null}
    foreColor="#FF4800"
    foreStrokeOpacity={1}
    gradientId="Progress"
    max={100}
    min={0}
    needMaxCircle={true}
    needMinCircle={false}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    pointerEvents="box-only"
    renderCenterView={null}
    scaleHeight={70}
    startColor={null}
    startDegree={130}
    stepValue={5}
    style={
      Array [
        Object {
          "opacity": 0,
          "position": "absolute",
        },
        Object {
          "height": 540,
          "width": 540,
        },
        undefined,
      ]
    }
    thumbFill="#fff"
    thumbRadius={35}
    thumbStroke="#fff"
    thumbStrokeWidth={2}
    value={50}
    x1="0%"
    x2="100%"
    y1="0%"
    y2="0%"
  />
</ImageBackground>
`;

exports[`TurnPlate components dot render 1`] = `
<ImageBackground
  source={1}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "marginVertical": 80,
        "position": "relative",
      },
      Object {
        "height": 600,
        "width": 600,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 124.29437251522862,
          "opacity": 1,
          "top": 463.7056274847714,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 65.74643608916315,
          "opacity": 1,
          "top": 368.1640786499874,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 56.95479825716694,
          "opacity": 1,
          "top": 256.45572839034463,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 99.8359213500126,
          "opacity": 1,
          "top": 152.9315394498065,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 185.04228006250872,
          "opacity": 1,
          "top": 80.15843419479174,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 293.99999999999994,
          "opacity": 1,
          "top": 54,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#0ff",
          "height": 12,
          "left": 402.95771993749116,
          "opacity": 1,
          "top": 80.15843419479168,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 488.16407864998723,
          "opacity": 1,
          "top": 152.93153944980622,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 531.0452017428331,
          "opacity": 1,
          "top": 256.45572839034475,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 522.2535639108369,
          "opacity": 1,
          "top": 368.1640786499873,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "borderRadius": 10,
          "height": 20,
          "position": "absolute",
          "width": 20,
        },
        Object {
          "backgroundColor": "#ffa",
          "height": 12,
          "left": 463.70562748477164,
          "opacity": 1,
          "top": 463.7056274847712,
          "width": 12,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "height": 370,
          "width": 370,
        },
        undefined,
      ]
    }
  >
    <AnimatedComponent
      style={
        Array [
          Object {
            "height": 370,
            "transform": Array [
              Object {
                "rotate": "162deg",
              },
            ],
            "width": 370,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderRadius": 10,
              "height": 20,
              "position": "absolute",
              "width": 20,
            },
            Object {
              "backgroundColor": "#0ff",
              "left": 68.93398282201788,
              "opacity": 1,
              "top": 281.06601717798213,
            },
            undefined,
          ]
        }
      />
    </AnimatedComponent>
  </View>
  <Progress
    andDegree={280}
    backColor="#E5E5E5"
    backStrokeOpacity={1}
    disabled={false}
    endColor={null}
    foreColor="#FF4800"
    foreStrokeOpacity={1}
    gradientId="Progress"
    max={50}
    min={0}
    needMaxCircle={true}
    needMinCircle={false}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    pointerEvents="box-only"
    renderCenterView={null}
    scaleHeight={70}
    startColor={null}
    startDegree={130}
    stepValue={5}
    style={
      Array [
        Object {
          "opacity": 0,
          "position": "absolute",
        },
        Object {
          "height": 540,
          "width": 540,
        },
        undefined,
      ]
    }
    thumbFill="#fff"
    thumbRadius={35}
    thumbStroke="#fff"
    thumbStrokeWidth={2}
    value={30}
    x1="0%"
    x2="100%"
    y1="0%"
    y2="0%"
  />
</ImageBackground>
`;
